# bpd

./: Cargo.toml  README.md
contrib/: release.sh
src/: main.rs  pinboard.rs  pocket.rs  rofi.rs  suggest.rs
