[package]
name = "bpd"
version = "0.1.0"
authors = ["fcd <femnad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
roxmltree = "0.13.0"
scraper = "0.12.0"
serde = "1.0.117"
serde_json = "1.0.59"
structopt = "0.3.20"
ureq = {version = "1.5.1", features = ["json"]}
